; ModuleID = '/home/carl/AnghaBench/esp-idf/components/wpa_supplicant/src/esp_supplicant/extr_esp_wpa2.c_esp_wifi_sta_wpa2_ent_clear_identity.c'
source_filename = "/home/carl/AnghaBench/esp-idf/components/wpa_supplicant/src/esp_supplicant/extr_esp_wpa2.c_esp_wifi_sta_wpa2_ent_clear_identity.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@g_wpa_anonymous_identity = common dso_local global i32* null, align 8
@g_wpa_anonymous_identity_len = common dso_local global i64 0, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @esp_wifi_sta_wpa2_ent_clear_identity() #0 {
  %1 = load i32*, i32** @g_wpa_anonymous_identity, align 8
  %2 = icmp ne i32* %1, null
  br i1 %2, label %3, label %6

3:                                                ; preds = %0
  %4 = load i32*, i32** @g_wpa_anonymous_identity, align 8
  %5 = call i32 @os_free(i32* %4)
  br label %6

6:                                                ; preds = %3, %0
  store i32* null, i32** @g_wpa_anonymous_identity, align 8
  store i64 0, i64* @g_wpa_anonymous_identity_len, align 8
  ret void
}

declare dso_local i32 @os_free(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
